objects/n2de__Team__c.object
<CustomObject>
    <description>Teams</description>
    <fields>
        <fullName>n2de__Actions_respect_distribution_hours__c</fullName>
        <inlineHelpText>Distribution hours that will be respected when calculating time to action.</inlineHelpText>
        <label>Tracking respects distribution hours</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Active_cap_and_balance_by__c</fullName>
        <defaultValue>&apos;Record Count&apos;</defaultValue>
        <inlineHelpText>For load balancing or active caps, use the count of records assigned, or the total value of those records</inlineHelpText>
        <label>Active cap and balance by</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Alert_respect_distribution_hours__c</fullName>
        <inlineHelpText>Distribution hours that will be respected when calculating alert periods.</inlineHelpText>
        <label>Respect distribution hours</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Alert_type__c</fullName>
        <inlineHelpText>Type of alert functionality to use for this team</inlineHelpText>
        <label>Alert type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Time Period</fullName>
                    <default>true</default>
                    <label>Time Period</label>
                </value>
                <value>
                    <fullName>Custom Date/Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>n2de__Assign_to_field__c</fullName>
        <inlineHelpText>Select a user lookup field to use for DE assignment. Defaults to Owner.</inlineHelpText>
        <label>Assign to field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Auto_action_value__c</fullName>
        <inlineHelpText>Value to set the tracked field to on auto-action</inlineHelpText>
        <label>Auto action value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Capping_pattern__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Capping pattern</label>
        <referenceTo>n2de__Capping_Pattern__c</referenceTo>
        <relationshipLabel>Distribution Teams</relationshipLabel>
        <relationshipName>Distribution_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>n2de__Distributed_record_value_field__c</fullName>
        <inlineHelpText>Name of the field on the distributed record that relates to that record&apos;s value</inlineHelpText>
        <label>Value field</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Distribution_hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The selected shift pattern (distribution hours) this team is assigned to</inlineHelpText>
        <label>Distribution hours</label>
        <referenceTo>n2de__Distribution_hours__c</referenceTo>
        <relationshipLabel>Distribution teams</relationshipLabel>
        <relationshipName>Distribution_teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>n2de__Distribution_type__c</fullName>
        <label>Distribution</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Distributors_with_tag_filters__c</fullName>
        <label>Distributors with tag filters</label>
        <summaryFilterItems>
            <field>n2de__Distributor__c.n2de__Is_active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>n2de__Distributor__c.n2de__Member_filter_type__c</field>
            <operation>equals</operation>
            <value>Tags</value>
        </summaryFilterItems>
        <summaryForeignKey>n2de__Distributor__c.n2de__Team__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>n2de__Enable_assignment_rejection__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Allow users to reject DE assignments if they are unsuitable or incorrectly assigned</inlineHelpText>
        <label>Enable assignment rejection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Event_types_to_action__c</fullName>
        <inlineHelpText>New events of the selected types will cause the next action to be automatically completed on the related lead or case object.</inlineHelpText>
        <label>Event types to auto-action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Execution_Order__c</fullName>
        <description>Order of execution for the team.</description>
        <inlineHelpText>Order of execution for the team.</inlineHelpText>
        <label>Execution Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Field_to_update_name__c</fullName>
        <inlineHelpText>When selected, the name of the object field whose value should be changed when an object is distributed to a team member.</inlineHelpText>
        <label>Field to update</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Field_to_update_value__c</fullName>
        <inlineHelpText>The value the field to update should be changed to when an object is distributed</inlineHelpText>
        <label>Field to update value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Holiday_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The holiday region that determines which company holidays this team subscribes to</inlineHelpText>
        <label>Holiday Region</label>
        <referenceTo>n2de__Holiday_group__c</referenceTo>
        <relationshipLabel>Distribution teams</relationshipLabel>
        <relationshipName>Distribution_teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>n2de__Inactive_object_not_filtered__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, inactive object records will be distributed.</inlineHelpText>
        <label>Distribute inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_Person_Accounts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Assign only Accounts of type Person Account</description>
        <inlineHelpText>Assign only Accounts of type Person Account</inlineHelpText>
        <label>Is Person Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_action_tracking__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked will enable the ability to track actions on Leads and Cases</inlineHelpText>
        <label>Time to Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When active, any active distributors in this team will distribute objects to team members.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_alert__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, will enable the creation of SLAs, based upon a time period and condition.</inlineHelpText>
        <label>SLAs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_auto_action_on_event__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When a new event is created on a lead or case distributed for this Team, it will cause the first/initial action to be automatically completed.</inlineHelpText>
        <label>Auto-action on event enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_auto_action_on_task__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When a new task is created on a lead or case distributed for this Team, it will cause the first/initial action to be automatically completed.</inlineHelpText>
        <label>Auto-action on task enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_distribute_to_queue__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check to enable team to distribute to queues, instead of users.</inlineHelpText>
        <label>Distribute to queue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_forced_load_balance_reset__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is a forced reset of the load balanced values of all team members required? This will usually happen when switching between load balancing by count and record value</inlineHelpText>
        <label>Is load balanced reset required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_logging_disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, logging of distributions will be disabled for this team</inlineHelpText>
        <label>Distribution logging disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_team_level_round_robin__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, this team uses team-level round robin order.</inlineHelpText>
        <label>Use team level round-robin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_triggers_respect_distribution_hours__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, trigger distributors will respect distribution hours and assign to the default owner when no team members are available.</inlineHelpText>
        <label>Triggers respect distribution hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Last_load_balance_reset__c</fullName>
        <label>Last load balance reset (Deprecated)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Load_balancing_duration__c</fullName>
        <label>Load balancing duration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                    <default>true</default>
                    <label>Daily</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>n2de__New_status_value__c</fullName>
        <inlineHelpText>Determines when a distribution is new. Default method where object last modified datetime is equal to the last distribution datetime can be overridden by selecting a status value to determine new. (used in logs list and widget)</inlineHelpText>
        <label>New distribution (Deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Object_action_assigned_value__c</fullName>
        <description>*** Deprecated ***</description>
        <label>Action on distribution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Object_action_field_name__c</fullName>
        <inlineHelpText>The selected field to be used for actions</inlineHelpText>
        <label>Action field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Object_action_tracked_value__c</fullName>
        <inlineHelpText>Actions that will be tracked, from the time of distribution to the time the action status was updated on the case or lead.</inlineHelpText>
        <label>Action to track</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Object_active_status_field_name__c</fullName>
        <inlineHelpText>The selected object field that determines whether a record is &quot;active&quot;.</inlineHelpText>
        <label>Active status field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Object_active_status_values__c</fullName>
        <description>A semicolon delimited list of &quot;active&quot; values</description>
        <inlineHelpText>Selected picklist values that denote that an object is &quot;active&quot;.</inlineHelpText>
        <label>Active status values (Deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Object_active_status_values_long__c</fullName>
        <description>A semicolon delimited list of &quot;active&quot; values</description>
        <inlineHelpText>Selected picklist values that denote that an object is &quot;active&quot;.</inlineHelpText>
        <label>Active status values</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>n2de__Object_name__c</fullName>
        <inlineHelpText>Name of the object to be distributed to members of this team.</inlineHelpText>
        <label>Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Object_team_filter_soql__c</fullName>
        <label>Team filter soql</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>n2de__Object_team_filter_ui_config__c</fullName>
        <label>Team filter ui config</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>n2de__Ready_for_deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Ready for deletion</inlineHelpText>
        <label>Ready for deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Rejection_request_limit__c</fullName>
        <inlineHelpText>Limit the number of rejections a user can request per day</inlineHelpText>
        <label>Rejection request limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Require_approval__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Rejection requests must be approved by managers</inlineHelpText>
        <label>Require approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__SLAs_respect_active_status__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>SLAs will only apply to records that are active.</inlineHelpText>
        <label>SLAs respect active status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Sticky_distributors__c</fullName>
        <label>Sticky distributors</label>
        <summaryFilterItems>
            <field>n2de__Distributor__c.n2de__Is_active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>n2de__Distributor__c.n2de__Algorithm__c</field>
            <operation>equals</operation>
            <value>Round robin sticky assignment</value>
        </summaryFilterItems>
        <summaryForeignKey>n2de__Distributor__c.n2de__Team__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>n2de__Sticky_team_level_distributors__c</fullName>
        <label>Sticky team level distributors</label>
        <summaryFilterItems>
            <field>n2de__Distributor__c.n2de__Is_active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>n2de__Distributor__c.n2de__Algorithm__c</field>
            <operation>equals</operation>
            <value>Round robin sticky assignment</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>n2de__Distributor__c.n2de__Sticky_match_level__c</field>
            <operation>equals</operation>
            <value>Team</value>
        </summaryFilterItems>
        <summaryForeignKey>n2de__Distributor__c.n2de__Team__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>n2de__Tag_weighting_pattern__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distribution tag weighting pattern</label>
        <referenceTo>n2de__Tag_weighting_pattern__c</referenceTo>
        <relationshipLabel>Distribution Teams</relationshipLabel>
        <relationshipName>Distribution_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>n2de__Task_types_to_action__c</fullName>
        <inlineHelpText>New tasks of the selected types will cause the next action to be automatically completed on the related lead or case object.</inlineHelpText>
        <label>Task types to auto-action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Team_level_caps_enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable team-level capping for this team.</inlineHelpText>
        <label>Team level caps enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Team_quota__c</fullName>
        <label>Team quota</label>
        <summarizedField>n2de__Team_member__c.n2de__Quota__c</summarizedField>
        <summaryFilterItems>
            <field>n2de__Team_member__c.n2de__Is_active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>n2de__Team_member__c.n2de__Team__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>n2de__Team_runtime__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team runtime</label>
        <referenceTo>n2de__Team_runtime__c</referenceTo>
        <relationshipLabel>Distribution Teams</relationshipLabel>
        <relationshipName>Team_runtime</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>n2de__Total_actions_tracked__c</fullName>
        <label>Total actions tracked</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Track_actions_any_user__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Action tracking is not restricted to the assigned user and will be tracked when any user performs the action.</inlineHelpText>
        <label>Track actions from any user</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Weighting_type__c</fullName>
        <inlineHelpText>Type of weighting to use for this team</inlineHelpText>
        <label>Weighting type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Tag</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Distribution Team</label>
    <listViews>
        <fullName>n2de__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distribution Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>